--- a/homework-2/index.html
+++ b/homework-2/index.html
@@ -17,9 +17,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
         <li><a href="parks.html">Walks in the Park</a></li>
-        <li><img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue."></li>
       </ul>
-
+      <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
     </nav>
     <h1>Springtime in Michigan</h1>
   </header>
