--- a/homework-2/neighborhood.html
+++ b/homework-2/neighborhood.html
@@ -19,9 +19,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
         <li><a href="parks.html">Walks in the Park</a></li>
-        <li><img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue."></li>
       </ul>
-
+      <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
     </nav>
     <h1>Neighborhood Walks</h1>
   </header>
